--- a/public/style.css
+++ b/public/style.css
@@ -374,3 +374,9 @@ html, body {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+body {
+  -webkit-user-select: none; /* For Safari/Chrome */
+  -moz-user-select: none;    /* For Firefox */
+  -ms-user-select: none;     /* For IE/Edge */
+  user-select: none;         /* Standard property for modern browsers */
+}
